--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">DMS</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="lbl_username">Username</string>
+    <string name="lbl_password">Password</string>
+    <string name="lbl_login">Login</string>
+    <string name="lbl_dont">Don\'t have an account?</string>
+    <string name="lbl_signup"><b>Sign Up</b></string>
 </resources>
